# noir-fuzzer

./: Cargo.toml  README.md
results/: 1696040507-assert.rust  1696040507-if.rust  1697152523-loop-Bool.nr  1697152523-loop-Bool.rs  1697152523-loop-U32.nr  1697152523-loop-U32.rs  reference_tests.nr  reference_tests.rs  struct_tests.nr  struct_tests.rs
src/: conditionals.rs  function_generator.rs  main.rs  random_data_creator.rs  reference_generator.rs  struct_generator.rs
