[package]
name = "noir-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
handlebars = "4.4.0"
serde_json = "1.0.107"
serde = "1.0.188"
strum = "0.25"
strum_macros = { version = "0.25", features = [] }